# zeta

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pipeline.yaml
API/categorical/: index.html
API/colormap/: index.html
API/continuos/: index.html
docs/: index.md
docs/API/: categorical.md  colormap.md
examples/: index.html
zeta/plot/: __init__.py  categorical.py
zeta/typing/: generics.py
